lab1/Test/L1-A-12-18.output
Error Type A at Line 12
Error Type B at Line 20
Error Type A at Line 26
Error Type B at Line 35
Error Type B at Line 41
Error Type A at Line 60
Error Type A at Line 62
