lab1/Test/L1-A-12-18.cmm
struct WpnR1 {
  float PCRhn8_f31r ;
}F911p [ 1242918005 ] , R_w0Ca2oc 

;
struct swLHVS hCakvRQF4rV5Kia5Vn ( ) {
  int RIzP ;
  if ( kyIuxobXxGF_76cRs5E ) {
    int L ;
    struct hdgMx_NKA GYU5AsSpY1Vznmt , X = WWX8ztbQNz4Bc8 
      ;
    if \( Ez )     FC5lkYD47s0WFq4BbNpB ;
else     while ( zO )     return K2vV2AJhpf6KD5RE 
      ;


    MG5_zNxdJNnqARMD && YNXCp4zV8Eq > KkK5D / ! iM0vvJ1uHvxMKUfD 
      [ MdfqzE5g0S6K = ZC8 || fMwFXYX65_uXRS_d5mC <= J_yd_wEu7KmuX0sn 
      - - MyNQbEe1H8IDg8Y7h ( XI5VRSg , XCfB2JWZcE_Dc6Azg 
      = uGw6DTbBLj9xj4 = njKckmnNB = iv_Afx6m == * x ( QGE93j5 
      = b != KKO2a_ik2Eq1l + yw6JF2zkJo7K ( krXB9MAY < w_17ZrV 
      ( nWdjxczmoceg , sIQaA85SJj || ( uJEswSfFHgrFn3fT6 
      ) ) ) >= 1664017550 ) + 1535936979.292559576 * ! fmcCkUM7aCCJoTv 
      ( ) . G_t0EIZtX2sQ61x9Lnpj * KrNSWUPJKI ) ] ;
  }
}%
int ;
int ;
int yHezsJ4U ( int PXNk3M_y9ans20ltQ2 , struct {
}K72cFigMsTHRYsf9MMf ) {
  struct Kl2sLgG08RIi5Tf zUaDc2EQ ;
  int oDYpd3V3 ;
  int D ;
  if ( OP )   w05GSxqd8NI ;
else   if ( R9WLd_h8lCDos9OVsa0   while ( BlRwe76 
    )   if ( dFjxpgqcMyHYG ) {
    if ( mLwUSZq2JfC7lJz )     if ( hAxNDz )     while 
      ( LYHjqRC7_59TVayU5x )     jndbjZCQ3CXF ;

else     if ( s2N9ZrUNSEAGYRP58RdZ )     if ( HLjwh8_IuYCeY 
      )     if ( tCMdcXK4wqNx871zX9A     while ( qXBk1IoW 
      )     sIzGISXWGMox ;

else     GHNE7qq_3 ;





  }else   while ( ZglbzbHHTJkLpvZuA1 )   P ;





  while ( WN9LSo2xj )   if ( fa2pow )   dsmjguovxjj7 
    ;
else   gtK518YV2wrAokL0E ;

#
  OOf9UMSXji3mU ;
  AAcUPSLaa ;'
}
int pSnuITQtTAToad3L ( struct qGVoJOA_x Nf ) {
}
